--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "YOUR BOT TOKEN HERE",
-    "prefix": "YOUR BOT PREFIX HERE"
+    "token": "ODI1NDg3MTA4ODY0ODY4Mzky.YF-oxw.MkeFSEBclGT8H3CVabu1r6e_7ME",
+    "prefix": "myprefix"
 }
